# github-projects-mcp

./: .env.template  .gitignore  README.md  count_mvp_issues.py  debug_projects.py  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  run_tests.py  verify_setup.py
.github/workflows/: build-dxt-package.yml  publish-mcp-package.yml  test.yml
github_projects_mcp/: __init__.py  config.py  server.py
github_projects_mcp/core/: __init__.py  client.py  models.py
tests/: __init__.py  conftest.py  test_canary.py  test_compatibility.py  test_github_api.py  test_live_integration.py  test_mcp_tools.py  test_transports.py
