[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-projects-mcp"
version = "0.1.0"
description = "MCP Server for GitHub Projects management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Gnu General Public License v3.0"}
authors = [
    {name = "Red Duck Labs, LLC", email = "contact@redducklabs.com"}
]
keywords = ["mcp", "github", "projects", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.12.0",
    "gql[requests]>=3.5.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
github-projects-mcp = "github_projects_mcp.server:main"

[project.urls]
Homepage = "https://github.com/redducklabs/github-projects-mcp"
Repository = "https://github.com/redducklabs/github-projects-mcp"
Issues = "https://github.com/redducklabs/github-projects-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["github_projects_mcp*"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Filter out known teardown issues from MCP client library
filterwarnings = [
    "ignore::RuntimeWarning:anyio.*",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
# Treat teardown errors as non-fatal for tests that pass functionally
addopts = "--tb=short --strict-markers"